HBase on local ZK done